# umu-templates

./: LICENSE  README.md
cpp-project/: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  README.md  justfile
cpp-project/src/: main.cpp
java-project/: .gitignore  README.md  justfile  pom.xml
report/: README.md  main.typ  reference.yml  template.typ
